# ED-test

./: .gitignore  PROJECT_UPDATES.md  README.md  publish.bat  publish.ps1  pyproject.toml
.github/workflows/: ci.yml  validate-case.yml
scripts/: log_update.py
src/ed_platform/: app.py  cli.py  schemas.py  service.py
src/ed_platform/benchmark/: __init__.py  energy_benchmark.py  run_helper.py
src/ed_platform/static/: app.js  index.html  styles.css
tests/: test_api.py
tests/fixtures/minimal_case_pass/Lx2Ly1_d0_u4_tp0_N2/: parameter.f90
