[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ed-web-platform"
version = "0.1.0"
description = "Browser-based ED/QMC validation platform for energy and Green-function comparisons."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "numpy>=2.1,<3.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ed_platform = ["static/*.html", "static/*.css", "static/*.js"]
